--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_signin_button: ^2.0.0
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
+  validatorless: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
